Fixing getCommentsByPostId